-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: core-libs
-
b15
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8365513 | 11.0.29 | Sergey Bylokhov | P4 | Resolved | Fixed | b03 |
| JDK-8372433 | openjdk8u482 | Zdenek Zambersky | P4 | Resolved | Fixed | b04 |
| JDK-8377399 | shenandoah8u482 | Zdenek Zambersky | P4 | Resolved | Fixed | b04 |
The constant AO_UNUSED_MBZ in jdk.pack's constants.h is initialized using the expression (-1 << 13). In C89/C++98 the semantics of left shifts of negative values are not described. C99/C++11 clarified that this is undefined behavior.
gcc -Wshift-negative-value warns about this. That warning is implicitly enabled by -Wextra when requesting builds using recent versions of the language standards.
Note that the jdk.pack module is deprecated.
gcc -Wshift-negative-value warns about this. That warning is implicitly enabled by -Wextra when requesting builds using recent versions of the language standards.
Note that the jdk.pack module is deprecated.
- backported by
-
JDK-8365513 Constant AO_UNUSED_MBZ uses left shift of negative value
-
- Resolved
-
-
JDK-8372433 Constant AO_UNUSED_MBZ uses left shift of negative value
-
- Resolved
-
-
JDK-8377399 Constant AO_UNUSED_MBZ uses left shift of negative value
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/f67be21a
-
Commit(master)
openjdk/jdk11u-dev/44f94ee8
-
Review(master)
openjdk/jdk8u-dev/722
-
Review(master)
openjdk/jdk11u-dev/3042
(2 links to)