8211804: Constant AO_UNUSED_MBZ uses left shift of negative value

Use unsigned shift.

Reviewed-by: alanb